--- a/dotfiles.org
+++ b/dotfiles.org
@@ -503,14 +503,13 @@ Define personal channel.
 Move data and maildir directory out of the way.
 
 #+BEGIN_SRC conf :tangle .config/environment.d/50-mu.conf
-  MU_HOME="$XDG_DATA_HOME/mu"
   MAILDIR="$KOEK_EMAIL_DIR"
 #+END_SRC
 
-To create the initial index, run:
+To create the database, run:
 
-#+BEGIN_SRC sh
-  mbsync -c "$XDG_CONFIG_HOME/isync/mbsyncrc" -a && mu index
+#+BEGIN_SRC sh :noweb yes
+  mbsync -c "$XDG_CONFIG_HOME/isync/mbsyncrc" -a && mu init --my-address="<<e-mail>>" --my-address="nicodeja@gmail.com" --my-address="nicodeja@mac.com"
 #+END_SRC
 
 * FreeCAD
