--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -441,6 +441,17 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
     :delight)
 #+END_SRC
 
+*** Issues
+
+**** Smartparens and GNOME Shell keybindings conflict
+Run:
+
+#+BEGIN_SRC sh
+  gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-left "[]"
+  gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-right "[]"
+  gsettings set org.gnome.desktop.wm.keybindings switch-to-workspace-down "['<Super>Page_Down']"
+#+END_SRC
+
 ** paren-face - Dim brackets
 [[https://github.com/tarsius/paren-face][paren-face (GitHub)]]
 
@@ -1061,6 +1072,20 @@ For the major mode, see [[*YASnippet][YASnippet]].
         (setenv "DICTIONARY" dictionary-name))
       (setq ispell-dictionary dictionary-name)))
 #+END_SRC
+
+*** Issues
+
+**** Spell checking contractions fails
+Visit the dictionary's affix file. On Arch Linux, affix files are
+saved in =/usr/share/hunspell/=. Add:
+
+#+BEGIN_SRC fundamental
+  ICONV 1
+  ICONV ’ '
+  WORDCHARS '’
+#+END_SRC
+
+For more information, see ~man 5 hunspell~.
 
 ** flycheck - Show syntax & style errors
 [[https://github.com/flycheck/flycheck][flycheck (GitHub)]]
