[emacs] Move resume clock to init.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2179,7 +2179,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
       "Setup tag completion for current.
   Candidates are collected from agenda files."
       (setq-local org-complete-tags-always-offer-all-agenda-tags t))
-
+    :init
     ;; Setup resume clock after showing initial buffer
     (add-hook 'window-setup-hook #'org-clock-persistence-insinuate)
     :config
